# filter-algorithms-research

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  advanced_filters_research.md  comparison_methodology.md  docker-compose.yml  filter_algorithms_research.md  filter_comparison_results.csv  filter_comparison_tool.py  index.html  ma_family_research.md  pyproject.toml  pytest.ini  requirements.txt  sg_filter_research.md
config/: 2382_HK.json  2382_HK_DP.json  2382_HK_QS.json  3690_HK.json  3690_HK_DP.json  3690_HK_QS.json  600115_SS.json  600115_SS_DP.json  600115_SS_QS.json  AAPL_US.json  APPL_US.json
data/: config.db  market.db
docs/: KNOWN_ISSUES.md  README.md  STPP_策略文档.md  backtest-analysis-report.md  backtest-design.md  backtest-diagnosis-v2.md  backtest-final-design.md  backtest-fix-plan.md  backtest-ui-mockup.html  backtest_design.md  chart-bug-analysis.md  data-freshness.md  data_processing.md  database_guide.md  deployment_guide.md  design-review-findings.md  filter_algorithms_research.md  operations_guide.md  research_report.md  schmitt-prediction-curve.md  streamlit-engineering-analysis-report.md  test-coverage-matrix.md  test_cases.md
filter_app/: config_db.py  db.py  requirements.txt  state.py  streamlit_app.py
research/: 3690_HK_deep_research.md  config-db-proposal.md  low_volatility_filter_strategy.md  sigma-sampling-report.md  strategy_documentation.md
streamlit/: backtest_engine.py  config_db.py  db.py  requirements.txt  state.py  streamlit_app.py
tests/: README.md  TEST_TIMES.md  conftest.py  (+21 more)
(+42 files in other folders)
